--- a/week-6/gpa-calculator-app1/src/app/auth-layout/auth-layout.component.html
+++ b/week-6/gpa-calculator-app1/src/app/auth-layout/auth-layout.component.html
@@ -1,1 +1,10 @@
-<p>auth-layout works!</p>
+<!--
+============================================
+; Title: Exercise 6.3
+; Author: Adam Luna
+; Date: 11 July 2021
+; Description: Auth layout component HTML file
+;===========================================
+ -->
+
+ <router-outlet></router-outlet>
