--- a/week-6/gpa-calculator-app2/src/app/base-layout/base-layout.component.html
+++ b/week-6/gpa-calculator-app2/src/app/base-layout/base-layout.component.html
@@ -23,7 +23,7 @@
 
 <div fxLayout="row wrap">
   <div fxFlex>
-    <mat-card class="main-container">
+    <mat-card class="main-container mat-elevation-z0">
       <mat-card-title>{{ assignment }}</mat-card-title>
       <br /><br />
       <mat-card-content>
