--- a/week-6/gpa-calculator-app2/src/app/home/home.component.html
+++ b/week-6/gpa-calculator-app2/src/app/home/home.component.html
@@ -7,54 +7,75 @@
 ;===========================================
  -->
 
- <div fxLayout="row wrap" fxLayoutGap="20px">
+<div fxLayout="row wrap" fxLayoutGap="20px">
   <div class="grade-form" fxFlex>
     <mat-card class="mat-elevation-z8">
-
       <mat-card-title>Grade Entry</mat-card-title>
-
       <mat-card-content>
         <form fxLayout="column" fxLayoutGap="16px">
           <mat-form-field fxFlex appearance="fill">
             <mat-label>Course</mat-label>
-            <input type="text" name="txtCourse" id="txtCourse" matInput [(ngModel)]="transcriptEntry.course" />
+
+            <!-- Enter course and save -->
+            <input
+              type="text"
+              name="txtCourse"
+              id="txtCourse"
+              matInput
+              [(ngModel)]="transcriptEntry.course"
+            />
           </mat-form-field>
 
           <mat-form-field fxFlex appearance="fill">
             <mat-label>Grade</mat-label>
+
+            <!-- Select grade and save -->
             <mat-select [(ngModel)]="transcriptEntry.grade" name="selectGrade">
-              <mat-option *ngFor="let grade of selectableGrades" [value]="grade">
+              <mat-option
+                *ngFor="let grade of selectableGrades"
+                [value]="grade"
+              >
                 {{ grade }}
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <button mat-raised-button color="primary" (click)="saveEntry()">Save</button>
+          <button
+            id="btnSave"
+            mat-raised-button
+            color="primary"
+            (click)="saveEntry()"
+          >
+            Save
+          </button>
         </form>
       </mat-card-content>
     </mat-card>
   </div>
 
   <div class="grade-summary" fxFlex>
-    <button mat-button color="primary" (click)="clearEntries()">Clear Transcript</button>
+    <button mat-button color="primary" (click)="clearEntries()">
+      Clear Transcript
+    </button>
     <mat-card class="mat-elevation-z8">
       <mat-card-title>Transcript</mat-card-title>
       <mat-card-content>
-        <app-grade-summary *ngFor="let entry of transcriptEntries" [course]="entry.course" [grade]="entry.grade"></app-grade-summary>
+        <app-grade-summary
+          *ngFor="let entry of transcriptEntries"
+          [course]="entry.course"
+          [grade]="entry.grade"
+        ></app-grade-summary>
       </mat-card-content>
     </mat-card>
-
   </div>
 </div>
 
-<br /><br />
-
-<!-- GPA -->
 <div fxLayout="column" fxLayoutGap="20px">
   <div fxFlex class="gpa">
-    <button mat-button color="primary" (click)="calculateResults()">Calculate GPA</button>
-
+    <button mat-button color="primary" (click)="calculateResults()">
+      Calculate GPA
+    </button>
     <mat-card class="mat-elevation-z8">
-      <mat-card-title style="text-align: center;">
+      <mat-card-title style="text-align: center">
         GPA: <app-gpa [gpaTotal]="gpaTotal"></app-gpa>
       </mat-card-title>
     </mat-card>
