--- a/week-6/in-n-out-booksp4/src/app/wishlist-create/wishlist-create.component.html
+++ b/week-6/in-n-out-booksp4/src/app/wishlist-create/wishlist-create.component.html
@@ -1,1 +1,22 @@
-<p>wishlist-create works!</p>
+<!--
+============================================
+; Title:  Exercise 6.2
+; Author: Adam Luna
+; Date: 15 July 2021
+; Description: Wishlist create component HTML file
+;===========================================
+ -->
+
+ <form fxLayout="column">
+    <mat-form-field fxFlex appearance="fill">
+      <mat-label>Title</mat-label>
+      <input type="text" name="title" matInput [(ngModel)]="item.title" />
+    </mat-form-field>
+  
+    <mat-form-field fxFlex appearance="fill">
+      <mat-label>Authors</mat-label>
+      <input type="text" name="authors" matInput [(ngModel)]="item.authors" />
+    </mat-form-field>
+  
+    <button mat-button color="primary" (click)="addItem()">Add item</button>
+  </form>
