--- a/week-6/in-n-out-booksp4/src/styles.scss
+++ b/week-6/in-n-out-booksp4/src/styles.scss
@@ -48,3 +48,5 @@ card-title-icon, .mat-icon {
 align-center {
   text-align: center;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
